tests/testcases/invalid/semantic/83_redeclaration_of_already_defined_types.ciel
struct A{
    int x;
};

struct A{
    int y;
    int z;
};

union A{
    char x;
};

enum A{
    RED
};



int main(){
    struct A obj;
    return 0;
}
